--- a/packages/config/src/conf/docker.yaml
+++ b/packages/config/src/conf/docker.yaml
@@ -75,9 +75,9 @@ auth:
 
 # A list of other known repositories we can talk to
 # https://verdaccio.org/docs/configuration#uplinks
-uplinks:
-  npmjs:
-    url: https://registry.npmjs.org/
+# uplinks:
+#   npmjs:
+#     url: https://registry.npmjs.org/
 
 # Learn how to protect your packages
 # https://verdaccio.org/docs/protect-your-dependencies/
