--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,13 @@
-version: '2.1'
 services:
   verdaccio:
     build: .
     container_name: verdaccio
     environment:
-      - VERDACCIO_PORT
+      - .env
     ports:
-      - $VERDACCIO_PORT:$VERDACCIO_PORT
+      - $VERDACCIO_IP:$VERDACCIO_PORT
     volumes:
       - verdaccio-storage:/verdaccio/storage
 volumes:
-  verdaccio:
+  verdaccio-storage:
     driver: local
